Moved Templates Location

--- a/src/directives/templates/layerWidget.html
+++ b/src/directives/templates/layerWidget.html
@@ -10,7 +10,7 @@
 </div>
 
 <!-- It should not be part of directive, it should belongs to using tag (availableHeight, and overflow)-->
-<div style="height:{{availableHeight}};overflow:auto;">
+<div>
 
         <layer-item layer="layer" ng-repeat="layer in layers | filter:layerFilter"></layer-item>
 
