--- a/test/app.css
+++ b/test/app.css
@@ -72,6 +72,9 @@
 }
 .io-navigation-item.active{
     background: rgba(0,0,0,.03);
+    border-left:5px solid #EF9A9A;
+    margin-left: 2px;
+    margin-top: 2px;
 }
 .io-navigation-item>i {
     line-height: 40px;
